add social icon

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ layui.use('element', function(){
                 </div>
                 
                 <div class="layui-col-md3 layui-col-sm3 layui-col-xs3">
-                <a href="www.linkedin.com/in/kazusa-sugeno"><i class="fa fa-linkedin" style="font-size:32px;"></i></a>
+                <a href="https://www.linkedin.com/in/kazusa-sugeno/"><i class="fa fa-linkedin" style="font-size:32px;"></i></a>
                 </div>
                 
                 <div class="layui-col-md3 layui-col-sm3 layui-col-xs3">
