--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ layui.use('element', function(){
     <div class="layui-row about">
         <div class="layui-col-xs12 layui-col-sm4 layui-col-md4 about_left">
             <img class="lazyload about_portrait" data-src="/self/img/icon.jpg" />
-            <h1> Author: Gesu </h1>
+            <h1> Gesu </h1>
             <h2> Graduate student </h2>
             
             
